# nickbot

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bot.cc  commands.cc  commands.h  config.h  db.cc  db.h  utils.h
commands/: commands.h  quickroom.cc  workrequest.cc
